swagger delete cuy
