# docs/swagger.yaml
@@ -71,6 +71,29 @@ info:
   title: SWAGGER TUGAS BESAR
   version: "1.0"
 paths:
+  /delete/{id}:
+    delete:
+      consumes:
+      - application/json
+      description: Hapus data parfume.
+      parameters:
+      - description: Masukan ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+        "400":
+          description: Bad Request
+        "500":
+          description: Internal Server Error
+      summary: Delete data parfume.
+      tags:
+      - Parfume
   /insert:
     post:
       consumes:
